--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css'
+        integrity='sha512-usVBAd66/NpVNfBge19gws2j6JZinnca12rAe2l+d+QkLU9fiG02O1X8Q6hepIpr/EYKZvKx/I9WsnujJuOmBA=='
+        crossorigin='anonymous' />
     <title>Oggetti Studenti</title>
 </head>
 
 <body>
-    <div id="result"></div>
+
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-12">
+                <h1 class="my-3">Class 38</h1>
+            </div>
+            <div class="col-6">
+                <h3>Best student</h3>
+                <div id="best-student"></div>
+            </div>
+            <div class="col-6">
+                <h3>All students</h3>
+                <ul id="students" class="list-unstyled ps-1"></ul>
+                <button id="add-student" class="btn btn-dark rounded-pill p-3">Add student</button>
+            </div>
+        </div>
+    </div>
     <script src="./js/functions.js"></script>
     <script src="./js/script.js"></script>
 </body>
