--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
                 <h3>All students</h3>
                 <ul id="students" class="list-unstyled ps-1"></ul>
                 <button id="add-student" class="btn btn-dark rounded-pill p-3">Add student</button>
+                <div id="input-section" class="row gy-3 d-none">
+                    <div class="col-12">
+                        <label for="name" class="d-block">Enter the name</label>
+                        <input id="name" type="text">
+                    </div>
+                    <div class="col-12">
+                        <label for="surname" class="d-block">Enter the surname</label>
+                        <input id="surname" type="text">
+                    </div>
+                    <div class="col-12">
+                        <label for="age" class="d-block">Enter the age</label>
+                        <input id="age" type="number">
+                    </div>
+                    <div class="col-12">
+                        <button id="confirm" class="btn btn-dark rounded-pill p-3">Confirm</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
