--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
 <body>
 
     <div class="container">
-        <div class="row text-center">
+        <div class="row text-center gy-3">
+            <!-- Titolo -->
             <div class="col-12">
                 <h1 class="my-3">Class 38</h1>
             </div>
-            <div class="col-6">
+            <!-- Miglior studente -->
+            <div class="col-12 col-md-3 offset-md-3">
                 <h3>Best student</h3>
                 <div id="best-student"></div>
             </div>
-            <div class="col-6">
+            <!-- Tutti gli studenti -->
+            <div class="col-12 col-md-3">
                 <h3>All students</h3>
                 <ul id="students" class="list-unstyled ps-1"></ul>
+                <!-- Bottone per inserire un nuovo studente -->
                 <button id="add-student" class="btn btn-dark rounded-pill p-3">Add student</button>
+                <!-- Sezione dove inserire i dati del nuovo studente -->
                 <div id="input-section" class="row gy-3 d-none">
                     <div class="col-12">
                         <label for="name" class="d-block">Enter the name</label>
